<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ImageSearchActivity"
        android:orientation="vertical">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/screen_pad"
            >
        <EditText
                android:id="@+id/searchEditText"
                android:layout_toLeftOf="@+id/searchBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:hint="@string/search_image_text"
                />
        <Button
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_text"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"/>
    </RelativeLayout>
    <TextView
            android:id="@+id/serachHeadr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/screen_pad"
            />
    <android.support.v7.widget.RecyclerView
            android:id="@+id/imageGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>